Fix : 상호작용 수정

--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -633,6 +633,7 @@
     <ClInclude Include="..\Header\Turret.h">
       <Filter>02. GameObject\06. FieldObj\05. HitObj</Filter>
     </ClInclude>
+    <ClInclude Include="..\Header\Bullet.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -864,9 +865,6 @@
     <ClCompile Include="..\Code\Tree.cpp">
       <Filter>02. GameObject\13. FixedObj\00. Tree</Filter>
     </ClCompile>
-    <ClCompile Include="..\Header\Tile.cpp">
-      <Filter>02. GameObject\14. Tile</Filter>
-    </ClCompile>
     <ClCompile Include="..\Code\House.cpp">
       <Filter>02. GameObject\13. FixedObj\01. House</Filter>
     </ClCompile>
@@ -965,6 +963,10 @@
     <ClCompile Include="..\Code\Turret.cpp">
       <Filter>02. GameObject\06. FieldObj\05. HitObj</Filter>
     </ClCompile>
+    <ClCompile Include="..\Code\Tile.cpp">
+      <Filter>02. GameObject\14. Tile</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\Bullet.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="Client.ico">
