--- a/Framework/Client/Include/Client.vcxproj.filters
+++ b/Framework/Client/Include/Client.vcxproj.filters
@@ -280,6 +280,12 @@
     <Filter Include="02. GameObject\12. FixedObj\03. Prop">
       <UniqueIdentifier>{6f452940-98c1-46f0-a247-54904b23b1b3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="02. GameObject\02. Monster\05. PlantCannon">
+      <UniqueIdentifier>{a8e023bc-1a7a-46f4-b19c-314773e56d02}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. GameObject\02. Monster\05. PlantCannon\PlantBall">
+      <UniqueIdentifier>{b64c1e57-5f0e-471b-810c-abd4f3dc77d1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Header\MainApp.h">
@@ -609,6 +615,13 @@
     <ClInclude Include="..\Header\Bullet.h" />
     <ClInclude Include="..\Header\TrashBummer.h" />
     <ClInclude Include="JellyPool.h" />
+    <ClInclude Include="..\Header\SludgeBall.h" />
+    <ClInclude Include="..\Header\PlantCannon.h">
+      <Filter>02. GameObject\02. Monster\05. PlantCannon</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Header\PlantBall.h">
+      <Filter>02. GameObject\02. Monster\05. PlantCannon\PlantBall</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Code\MainApp.cpp">
@@ -922,6 +935,13 @@
     </ClCompile>
     <ClCompile Include="..\Code\Bullet.cpp" />
     <ClCompile Include="..\Code\TrashBummer.cpp" />
+    <ClCompile Include="..\Code\SludgeBall.cpp" />
+    <ClCompile Include="..\Code\PlantCannon.cpp">
+      <Filter>02. GameObject\02. Monster\05. PlantCannon</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Code\PlantBall.cpp">
+      <Filter>02. GameObject\02. Monster\05. PlantCannon\PlantBall</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Client.ico">
